Cleanup and add coloring to screen names

--- a/src/main/resources/assets/openscreens/lang/en_us.lang
+++ b/src/main/resources/assets/openscreens/lang/en_us.lang
@@ -1,4 +1,4 @@
 itemGroup.openscreens=OpenScreens
 tile.openscreens.flatscreen1.name=Flatscreen (Tier 1)
-tile.openscreens.flatscreen2.name=Flatscreen (Tier 2)
-tile.openscreens.flatscreen3.name=Flatscreen (Tier 3)
+tile.openscreens.flatscreen2.name=§eFlatscreen (Tier 2)
+tile.openscreens.flatscreen3.name=§bFlatscreen (Tier 3)
