Add holo screens, recipes, and fixes

--- a/src/main/resources/assets/openscreens/lang/en_us.lang
+++ b/src/main/resources/assets/openscreens/lang/en_us.lang
@@ -5,3 +5,8 @@ tile.openscreens.backflatscreen3.name=§bFlatscreen (Back) (Tier 3)
 tile.openscreens.frontflatscreen1.name=Flatscreen (Front) (Tier 1)
 tile.openscreens.frontflatscreen2.name=§eFlatscreen (Front) (Tier 2)
 tile.openscreens.frontflatscreen3.name=§bFlatscreen (Front) (Tier 3)
+tile.openscreens.holoscreen1.name=Holo Screen (Tier 1)
+tile.openscreens.holoscreen2.name=§eHolo Screen (Tier 2)
+tile.openscreens.holoscreen3.name=§bHolo Screen (Tier 3)
+tooltip.openscreens.holoscreen.info=§7Shift+RCLICK§8 sides to adjust size
+tooltip.openscreens.holoscreen.dyeable=§7Use dyes to color background
