--- a/src/main/resources/assets/openscreens/lang/en_us.lang
+++ b/src/main/resources/assets/openscreens/lang/en_us.lang
@@ -8,5 +8,10 @@ tile.openscreens.frontflatscreen3.name=§bFlatscreen (Front) (Tier 3)
 tile.openscreens.holoscreen1.name=Holo Screen (Tier 1)
 tile.openscreens.holoscreen2.name=§eHolo Screen (Tier 2)
 tile.openscreens.holoscreen3.name=§bHolo Screen (Tier 3)
-tooltip.openscreens.holoscreen.info=§7Shift+RCLICK§8 sides to adjust size
+tooltip.openscreens.holoscreen.info=§7With an empty hand, §lSneak/Shift+RCLICK§r§7 sides to adjust size
 tooltip.openscreens.holoscreen.dyeable=§7Use dyes to color background
+tooltip.openscreens.holoscreen.moreinfo=§fHold SHIFT for more info
+tooltip.openscreens.holoscreen.left=§7Left -> Decrease Width
+tooltip.openscreens.holoscreen.right=§7Right -> Increase Width
+tooltip.openscreens.holoscreen.front=§7Front -> Decrease Height
+tooltip.openscreens.holoscreen.top=§7Top -> Increase Height
